# craft

./: .gitignore  .gitmodules  .pre-commit-config.yaml  APEX.md  CI-LOCAL.md  Cargo.toml  DESIGN.md  DEVNET.md  README.md  ROADMAP.md  build.sh  example_refactored_error_handling.rs  finish_escrow_interactive.js  rust-toolchain.toml  rustfmt.toml  start-craft-ui.sh  stop-craft-ui.sh  test.sh  wasm-fingerprint-spec.md
ci-tools/: Cargo.toml
ci-tools/src/: build_all.rs  ci_check.rs  ci_full.rs  lib.rs  markdown_test.rs
ci-tools/src/helpers/: e2e_test.rs  host_functions_audit.rs  pre_commit_check.rs  test_all.rs  wasm_exports_check.rs
craft/: Cargo.toml  build.rs
craft/src/: docker.rs  lib.rs  main.rs
craft/src/commands/: mod.rs  test.rs
craft/src/config/: mod.rs
craft/src/utils/: mod.rs
projects/: Cargo.toml  Makefile  README.md  build.rs
projects/amounts/: Cargo.toml
projects/amounts/src/: lib.rs
projects/codecov_tests/: copy.js
projects/codecov_tests/src/: host_bindings_loose.rs  lib.rs
projects/decoder_tests/: Cargo.toml  README.md
projects/decoder_tests/src/: lib.rs
projects/e2e-tests/: Cargo.toml  README.md
projects/e2e-tests/base_tests/: Cargo.toml
projects/e2e-tests/base_tests/src/: lib.rs
projects/e2e-tests/codecov_tests/: Cargo.toml
projects/e2e-tests/codecov_tests/.cargo/: config.toml
projects/e2e-tests/codecov_tests/src/: host_bindings_loose.rs  host_bindings_loose_for_testing.rs  host_bindings_override.rs  lib.rs
projects/e2e-tests/contract_data/: Cargo.toml
projects/e2e-tests/contract_data/src/: lib.rs
projects/e2e-tests/decoder_tests/: Cargo.toml  README.md
projects/e2e-tests/decoder_tests/src/: lib.rs
projects/e2e-tests/easymode/: Cargo.toml
projects/e2e-tests/easymode/src/: lib.rs
projects/e2e-tests/emit_txn/: Cargo.toml
projects/e2e-tests/emit_txn/src/: lib.rs
projects/e2e-tests/events/: Cargo.toml
projects/e2e-tests/float_tests/: Cargo.toml  README.md
projects/e2e-tests/float_tests/src/: lib.rs
projects/e2e-tests/host_functions_test/: Cargo.toml
projects/e2e-tests/keylet_exists/: README.md
projects/e2e-tests/parameters/: Cargo.toml
projects/e2e-tests/trace_escrow_account/: Cargo.toml  README.md
projects/e2e-tests/trace_escrow_finish/: Cargo.toml  README.md
projects/e2e-tests/trace_escrow_ledger_object/: Cargo.toml  README.md
projects/erc20/: Cargo.toml
projects/erc20/src/: lib.rs
projects/examples/smart-escrows/: README.md
projects/float_tests/: Cargo.toml  README.md
projects/float_tests/src/: lib.rs
projects/groth16/: Cargo.toml
projects/groth16/src/: lib.rs
projects/hasher/: Cargo.toml
projects/hasher/src/: lib.rs
projects/helloworld/: Cargo.toml
projects/helloworld/src/: lib.rs
projects/host_functions_test/: Cargo.toml
projects/host_functions_test/src/: lib.rs
projects/its/: README.md
projects/its/codecov_tests/: Cargo.toml
projects/its/keylet_exists/: Cargo.toml  README.md
projects/json_account_id_compare/: Cargo.toml  README.md
projects/json_account_id_compare/src/: lib.rs
projects/keylet_example/: Cargo.toml
projects/keylet_example/src/: lib.rs
projects/kyc/: Cargo.toml
projects/kyc/src/: lib.rs
projects/ledger_access_test/: Cargo.toml
projects/ledger_access_test/src/: lib.rs
projects/ledger_sqn/: Cargo.toml
projects/ledger_sqn/src/: lib.rs
projects/nft_owner/: Cargo.toml
projects/nft_owner/src/: lib.rs
projects/nft_reward/: Cargo.toml  README.md
projects/nft_reward/src/: lib.rs
projects/notary/: Cargo.toml  README.md  build.rs
projects/notary/src/: lib.rs
projects/notary_macro_example/: Cargo.toml
projects/notary_macro_example/src/: lib.rs
projects/oracle/: Cargo.toml  README.md
projects/oracle/src/: lib.rs
projects/return_1/: Cargo.toml
projects/return_1/src/: lib.rs
projects/rippled_unittests/: Cargo.toml  README.md
projects/rippled_unittests/src/: lib.rs
projects/src/: lib.rs
projects/trace_escrow_account/: Cargo.toml
projects/trace_escrow_finish/: Cargo.toml
projects/trace_escrow_ledger_object/: Cargo.toml
projects/trace_escrow_ledger_object/src/: lib.rs
projects/xrpl_std_example/: Cargo.toml  README.md
projects/xrpl_std_example/src/: lib.rs
projects/xrpl_std_examples/trace_escrow_account/: Cargo.toml  README.md
projects/xrpl_std_examples/trace_escrow_finish/: Cargo.toml  README.md
projects/xrpl_std_examples/trace_escrow_ledger_object/: Cargo.toml  README.md
projects/xrpl_std_update_data_test/: Cargo.toml
projects/xrpl_std_update_data_test/src/: lib.rs
wasm-host/: Cargo.toml  README.md  exec.sh
wasm-host-simulator/: Cargo.toml  README.md  exec.sh
wasm-host-simulator/src/: data_provider.rs  decoding.rs  host_functions.rs  host_functions_wamr.rs  lib.rs  main.rs  mock_data.rs  sfield.rs  vm.rs  vm_wamr.rs
wasm-host-simulator/src/host_utils/: escrow_finish_utils.rs  mod.rs
wasm-host-simulator/src/types/: core.rs  mod.rs  wrappers.rs
wasm-host-simulator/xrpld-number/: Cargo.toml  build.rs
wasm-host-simulator/xrpld-number/c/: CMakeLists.txt
wasm-host-simulator/xrpld-number/examples/: hello_number.rs
wasm-host-simulator/xrpld-number/src/: lib.rs  xrpl_iou_value.rs
wasm-host/fixtures/host_functions_test/: ledger_header.json  nfts.json
wasm-host/src/: call_recorder.rs  data_provider.rs  decoding.rs  hashing.rs  host.rs  host_function_utils.rs  host_functions.rs  host_functions_wamr.rs  main.rs  mock_data.rs  recording_host_functions.rs  sfield.rs  vm.rs  vm_wamr.rs
wasm-host/xrpld-number/: Cargo.toml  build.rs  windows_build.md
wasm-host/xrpld-number/c/: CMakeLists.txt
wasm-host/xrpld-number/examples/: hello_number.rs
wasm-host/xrpld-number/src/: lib.rs  xrpl_iou_value.rs
xrpl-std/: Cargo.toml  README.md
xrpl-std/src/: host_lib.rs  keylet.rs  lib.rs  locator.rs  sfield.rs  types.rs
xrpl-std/src/core/: error_codes.rs  field_codes.rs  locator.rs  mod.rs
xrpl-std/src/core/tx/: mod.rs  (+2 more)
xrpl-std/src/host/: error_codes.rs  host_bindings.rs  host_bindings_for_testing.rs  host_bindings_testing.rs  host_bindings_trait.rs  host_bindings_wasm.rs  mod.rs  trace.rs
(+315 files in other folders)
