[workspace]
members = [
    ".",
    "wasm-host"
]

[package]
name = "craft"
version = "0.5.1"
edition = "2024"
description = "Command-line tool for building, testing, and deploying XRPL smart contracts in WASM"
license = "ISC"
repository = "https://github.com/XRPLF/craft"
homepage = "https://github.com/XRPLF/craft"
readme = "README.md"
keywords = ["xrpl", "wasm", "smart-contracts", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
atty = "0.2"
bs58 = "0.5"
clap = { version = "4.4", features = ["derive"] }
colored = "2.2.0"
docker-api = "0.14"
futures = "0.3"
hex = "0.4"
inquire = "0.7.5"
open = "5.3.2"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
ripemd = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.36", features = ["full"] }
walkdir = "2.4"
which = "7.0.3"
