[workspace]
resolver = "2"
members = [
    "craft",
    "wasm-host",
    "xrpl-address-macro",
    "xrpl-std",
    "projects/decoder_tests",
    "projects/float_tests",
    "projects/kyc",
    "projects/ledger_sqn",
    "projects/nft_owner",
    "projects/notary",
    "projects/notary_macro_example",
    "projects/oracle",
    "projects/xrpl_std_examples/trace_escrow_account",
    "projects/xrpl_std_examples/trace_escrow_finish",
    "projects/xrpl_std_examples/trace_escrow_ledger_object",
    "rippled-tests/codecov_tests",
    "rippled-tests/host_functions_test",
    "rippled-tests/keylet_example",
    "wasm-host/xrpld-number"
]

[profile.release]
opt-level = "s"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Compile in one unit for better optimization and smaller binary size
panic = "abort"   # `no-std` can't unwind on panic, so choose abort (plus no panic handler means smaller binary)

[profile.dev]
panic = "unwind" # For debugging, allows unwinding if code is executed as Rust (e.g., unit tests)
