[workspace]
resolver = "2"
members = [
    "craft",
    "wasm-host",
    "xrpl-address-macro",
    "xrpl-std",
    "wasm-host/xrpld-number"
]
exclude = [
    "projects"
]

[profile.release]
opt-level = "s"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Compile in one unit for better optimization and smaller binary size
panic = "abort"   # `no-std` can't unwind on panic, so choose abort (plus no panic handler means smaller binary)

[profile.dev]
panic = "unwind" # For debugging, allows unwinding if code is executed as Rust (e.g., unit tests)
