[package]
name = "ci-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
regex = "1.10"

# Multiple binaries for different CI tasks
[[bin]]
name = "ci-check"
path = "src/ci_check.rs"

[[bin]]
name = "ci-full"
path = "src/ci_full.rs"

[[bin]]
name = "build-all"
path = "src/build_all.rs"

[[bin]]
name = "test-all"
path = "src/test_all.rs"

[[bin]]
name = "pre-commit-check"
path = "src/pre_commit_check.rs"

[[bin]]
name = "wasm-exports-check"
path = "src/wasm_exports_check.rs"

[[bin]]
name = "host-functions-audit"
path = "src/host_functions_audit.rs"

[[bin]]
name = "markdown-test"
path = "src/markdown_test.rs"

[[bin]]
name = "e2e-test"
path = "src/e2e_test.rs"
