[package]
name = "craft"
version = "0.5.1-devnet5"
edition = "2024"
description = "Command-line tool for building, testing, and deploying XRPL smart contracts in WASM"
license = "ISC"
repository = "https://github.com/ripple/craft"
homepage = "https://github.com/ripple/craft"
readme = "../README.md"
keywords = ["xrpl", "wasm", "smart-contracts", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
docker-api = "0.14"
futures = "0.3"
hex = "0.4"
inquire = "0.9.1"
open = "5.3.2"
regex = "1.12"
reqwest = { version = "0.12", features = ["json"] }
ripemd = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["full"] }
walkdir = "2.4"
which = "8.0.0"

[build-dependencies]
hex = "0.4"
sha2 = "0.10"
