[workspace]
resolver = "2"
members = [
    "e2e-tests/codecov_tests",
    "e2e-tests/decoder_tests",
    "e2e-tests/float_tests",
    "e2e-tests/host_functions_test",
    "e2e-tests/keylet_exists",
    "e2e-tests/trace_escrow_account",
    "e2e-tests/trace_escrow_finish",
    "e2e-tests/trace_escrow_ledger_object",
    "examples/smart-escrows/kyc",
    "examples/smart-escrows/ledger_sqn",
    "examples/smart-escrows/nft_owner",
    "examples/smart-escrows/notary",
    "examples/smart-escrows/notary_macro_example",
    "examples/smart-escrows/oracle",
]

[profile.release]
opt-level = "s"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Compile in one unit for better optimization and smaller binary size
panic = "abort"   # `no-std` can't unwind on panic, so choose abort (plus no panic handler means smaller binary)

[profile.dev]
panic = "unwind" # For debugging, allows unwinding if code is executed as Rust (e.g., unit tests)
