[package]
name = "wasm-host-simulator"
version = "0.5.1-devnet5"
edition = "2024"
license = "ISC"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
sha2 = "0.11.0-pre.5"
xrpl-rust = { version = "1.0.0", default-features = false, features = ["core"] }
hex = "0.4.3"
lazy_static = "1.5.0"
wamr-rust-sdk = { git = "https://github.com/ripple/wamr-rust-sdk.git"}
bigdecimal = {version = "0.4.9", features = ["serde-json"]}
num-traits = "0.2.19"
num-derive = "0.4.2"
xrpld-number = { path = "xrpld-number" }
xrpl-wasm-std = { path = "../xrpl-wasm-std" }
