[package]
name = "amounts"
version = "0.1.0"
edition = "2024"
description = "A Smart Escrow demo that operates on XRP, IOU, and MPT amounts to prove functionality of each."
license = "MIT"

# This empty workspace definition keeps this project independent of the parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "unwind" # For debugging, support std-lib with unwinding in the `dev` profile

[dependencies]
xrpl-std = { path = "../../xrpl-std" }
