[package]
name = "erc20"
version = "0.1.0"
edition = "2024"
license = "MIT"

# This empty workspace definition keeps this project independent of the parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
panic = "abort"

[dependencies]
xrpl-std = { path = "../../xrpl-std" }
blake3 = { version = "1.8.2", default-features = false }
wee_alloc = "0.4.5"
