[package]
name = "float_tests"
version = "0.0.1"
edition = "2024"

# This empty workspace definition keeps this project independent of the parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
panic = "abort"

[dependencies]
xrpl-std = { path = "../../xrpl-std" }
