[package]
name = "host_functions_test"
version = "0.1.0"
edition = "2024"

# This empty workspace definition keeps this project independent of the parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
xrpl-std = { path = "../../xrpl-std", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
