[package]
name = "kyc"
version = "0.1.0"
edition = "2024"
description = "A Smart Escrow that unlocks based on the presence of a certain credential."
license = "MIT"

# This empty workspace definition keeps this project independent of the parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
panic = "abort"

[dependencies]
xrpl-std = { path = "../../xrpl-std" }
