[package]
name = "ledger_sqn"
version = "0.1.0"
edition = "2024"
description = ""
license = "MIT"

# This empty workspace definition keeps this project independent of the parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Link-time optimization
codegen-units = 1
panic = "abort"  # Minimize size by avoiding panic handling code

[dependencies]
xrpl-std = { path = "../../xrpl-std" }