[package]
name = "notary"
version = "0.5.1"
edition = "2024"
description = "A Smart Escrow that unlocks when the EscrowFinish transaction is signed by a notary."
license = "ISC"
build = "build.rs"


[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Compile in one unit for better optimization and smaller binary size
panic = "abort"   # `no-std` can't unwind on panic, so choose abort (plus no panic handler means smaller binary)

[profile.dev]
panic = "unwind" # For debugging, allows unwinding if code is executed as Rust (e.g., unit tests)

[dependencies]
xrpl-std = { path = "../../xrpl-std" }
xrpl-address-macro = { path = "../../xrpl-address-macro" }

[build-dependencies]
bs58 = "0.5"
hex = "0.4"
sha2 = "0.10"
