[package]
name = "notary"
version = "0.5.1"
edition = "2024"
description = "A Smart Escrow that unlocks when the EscrowFinish transaction is signed by a notary."
license = "ISC"
build = "build.rs"


[lib]
crate-type = ["cdylib"]


[dependencies]
xrpl-std = { path = "../../xrpl-std" }
xrpl-address-macro = { path = "../../xrpl-address-macro" }

[build-dependencies]
bs58 = "0.5"
hex = "0.4"
sha2 = "0.10"
