[package]
name = "notary_macro_example"
version = "0.1.0"
edition = "2024"
description = "Example showing compile-time r-address to hex conversion using a macro"
license = "ISC"


[lib]
crate-type = ["cdylib"]


[dependencies]
xrpl-std = { path = "../../xrpl-std" }
xrpl-address-macro = { path = "../../xrpl-address-macro" }
