[package]
name = "xrpl_std_example"
version = "0.0.1"
edition = "2024"
description = "A Smart Escrow demo that calls every host function and traces values to prove each host function works properly."
license = "MIT"

# This empty workspace definition keeps this project independent of the parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
panic = "abort"

[dependencies]
xrpl-std = { path = "../../xrpl-std" }