[package]
edition = "2024"
name = "xrpl_std_update_data_test"
version = "0.0.1"

# This empty workspace definition keeps this project independent of the parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's' # Optimize for size
panic = "abort"

[dependencies]
xrpl-std = { path = "../../xrpl-std" }
# We might need a serialization library later, e.g., serde + serde_json_core or similar
# For now, we'll manually construct a byte array.
