[package]
name = "host_functions_test"
version = "0.5.1-devnet5"
edition = "2024"
description = "End-to-end test suite for all 26 WASM host functions across 7 categories with comprehensive error handling"
license = "ISC"

# This empty workspace definition keeps this project independent of the parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[profile.dev]
panic = "abort"

[dependencies]
xrpl-std = { path = "../../../xrpl-std" }
