[package]
name = "trace_escrow_account"
version = "0.0.1"
edition = "2024"
description = "A Smart Escrow that accesses and traces every field in an `AccountRoot` object associated with an `EscrowFinish`"
license = "ISC"


[lib]
crate-type = ["cdylib"]


[dependencies]
xrpl-std = { path = "../../../xrpl-std" }
